tests/compile_fail/type_mismatch_dimension.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/type_mismatch_dimension.rs:28:19
   |
28 |     let x: Time = Length::meters(1.0);
   |                   ^^^^^^^^^^^^^^^^^^^ expected `Dimension { time: 1, length: 0 }`, found `Dimension { time: 0, length: 1 }`
   |
   = note: expected constant `Dimension { time: 1, length: 0 }`
              found constant `Dimension { time: 0, length: 1 }`
